testsuite/tests/rep-poly/RepPolyDoBody2.stderr
RepPolyDoBody2.hs:23:3: error: [GHC-55287]
    • The first argument of the rebindable syntax operator ‘(>>)’
        arising from a do statement
      does not have a fixed runtime representation.
      Its type is:
        mb0 :: TYPE rep0
      When unifying:
        • mc0
        • ma
      Cannot unify ‘rep’ with the type variable ‘rep0’
      because the former is not a concrete ‘RuntimeRep’.
    • In a stmt of a 'do' block: undefined :: ()
      In the expression:
        do undefined :: ()
         return ()
      In an equation for ‘foo’:
          foo _
            = do undefined :: ()
               return ()

